# nsavp_tools

./: CHANGELOG.md  README.md
conversion/: CMakeLists.txt  package.xml
conversion/include/h5_io/: H5UtilityFunctions.h
conversion/include/h5_io/h5_to_common/: H5ToCommonCameraDiagnosticsWriter.h  H5ToCommonConfigurationWriter.h  H5ToCommonEventsWriter.h  H5ToCommonImageMetaWriter.h  H5ToCommonImageWriter.h  H5ToCommonPoseStampedWriter.h  H5ToCommonWriter.h
conversion/include/h5_io/h5_to_ros/: H5ToRosCameraDiagnosticsWriter.h  H5ToRosConfigurationWriter.h  H5ToRosEventsWriter.h  H5ToRosImageMetaWriter.h  H5ToRosImageWriter.h  H5ToRosMessageWriter.h  H5ToRosPoseStampedWriter.h
conversion/include/h5_io/ros_to_h5/: RosCameraDiagnosticsToH5Writer.h  RosConfigurationToH5Writer.h  RosEventsToH5Writer.h  RosImageMetaToH5Writer.h  RosImageToH5Writer.h  RosMessageToH5Writer.h  RosPoseStampedToH5Writer.h
conversion/include/h5_io/ros_to_h5/compression/: CompressionMethod.h  GzipCompressionMethod.h
conversion/launch/: h5_combine.launch  h5_to_common.launch  h5_to_rosbag.launch  rosbag_to_h5.launch  rosbag_validator.launch
conversion/src/: H5Combine.cpp  H5ToCommon.cpp  H5ToRosbag.cpp  RosbagToH5.cpp  RosbagValidator.cpp
conversion/src/h5_io/: H5UtilityFunctions.cpp
conversion/src/h5_io/h5_to_common/: H5ToCommonCameraDiagnosticsWriter.cpp  H5ToCommonConfigurationWriter.cpp  H5ToCommonEventsWriter.cpp  H5ToCommonImageMetaWriter.cpp  H5ToCommonImageWriter.cpp  H5ToCommonPoseStampedWriter.cpp  H5ToCommonWriter.cpp
conversion/src/h5_io/h5_to_ros/: H5ToRosCameraDiagnosticsWriter.cpp  H5ToRosConfigurationWriter.cpp  H5ToRosEventsWriter.cpp  H5ToRosImageMetaWriter.cpp  H5ToRosImageWriter.cpp  H5ToRosMessageWriter.cpp  H5ToRosPoseStampedWriter.cpp
conversion/src/h5_io/ros_to_h5/: RosCameraDiagnosticsToH5Writer.cpp  RosConfigurationToH5Writer.cpp  RosEventsToH5Writer.cpp  RosImageMetaToH5Writer.cpp  RosImageToH5Writer.cpp  RosMessageToH5Writer.cpp  RosPoseStampedToH5Writer.cpp
conversion/src/h5_io/ros_to_h5/compression/: GzipCompressionMethod.cpp
docker/: Dockerfile_conversion  Dockerfile_place_recognition  Dockerfile_preprocessing_and_visualization
documentation/: conversion.md  data_format.md  place_recognition.md  preprocessing_and_visualization.md  sensors.md
image_meta_msgs/: CMakeLists.txt  package.xml
image_meta_msgs/include/image_meta_msgs/: add_val.h
image_meta_msgs/msg/: CameraDiagnostics.msg  ImageMeta.msg  NameValueInt.msg
image_meta_msgs/src/: image_meta_talker.py
image_meta_msgs/srv/: GetDeviceConfig.srv  SetDeviceConfig.srv
place_recognition/: evaluation.py  netvlad_place_recognition.py
preprocessing_and_visualization/: CMakeLists.txt  all_sensors.rviz  camera_frames.rviz  package.xml  setup.py  stereo_rectification.perspective
preprocessing_and_visualization/launch/: preprocessing_and_visualization.launch
preprocessing_and_visualization/scripts/: image_plotting.py  image_preprocessing.py  pose_visualization.py  stereo_rectification_visualization.py
preprocessing_and_visualization/src/preprocessing_and_visualization/: common_utils.py
